--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -12,17 +12,29 @@
 <body>
     <input type="hidden" value="{{jusoUrl}}" id="juso-url" />
     <a
-        href="https://www.juso.go.kr/addrlink/addrLinkUrl.do?confmKey=devU01TX0FVVEgyMDIyMDUyMzEwNDgzNTExMjYwMDA=&returnUrl=http://localhost:8080/juso/callback&resultType=4">주소찾기
-        하이퍼링크</a>
+        href="https://www.juso.go.kr/addrlink/addrLinkUrl.do?confmKey=devU01TX0FVVEgyMDIyMDUyMzEwNDgzNTExMjYwMDA=&returnUrl=http://localhost:8080/juso/callback&resultType=4">
+        주소찾기 하이퍼링크
+    </a>
     <br />
     <button onclick="jusoPopup()">주소찾기</button> <br />
-    <input type="text" value="" />
+    <input type="text" value="" id="road-full-addr" />
 
     <script>
         function jusoPopup() {
-            let jusoUrl = $("#juso-url").val();
-            window.open("jusoUrl", "pop", "width=570, height=420"); // 팝업창으로 띄우기
+            let jusoUrl = $('#juso-url').val();
+            window.open(jusoUrl, "pop", "width=570, height=420"); // 새 창 띄우는 메서드
+            // window.close();
         }
+
+        async function jusoCheck() {
+            let response = await fetch("/juso/check");
+            let responseParse = await response.text();
+            console.log(responseParse);
+            $("#road-full-addr").val(responseParse);
+        }
+
+        // 지속적으로 호출
+        setInterval(jusoCheck, 1000); // 1초에 한번씩 실행
     </script>
 </body>
 
